# arbokit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  tree.bat  tree.ps1  usage.html
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/arbokit/: colors.html  icons.html  palettes.html  spacing.html  styles.html  typography.html
_sources/api/: colors.rst.txt  icons.rst.txt  palettes.rst.txt  spacing.rst.txt  typography.rst.txt
api/: colors.html  icons.html  palettes.html  spacing.html  styles.html  typography.html
docs/: conf.py  index.rst  usage.rst
docs/api/: styles.rst
examples/: demo.py
scripts/: check.py  generate_resources.py
src/arbokit/: __init__.py  colors.py  icons.py  palettes.py  spacing.py  styles.py  theme.py  typography.py
src/arbokit/resources/: icons.qrc  icons_rc.py
src/arbokit/resources/themes/: colors.json
tests/: test_colors.py  test_palettes.py  test_spacing.py  test_styles.py  test_typography.py
