[project]
name = "arbokit"
version = "0.1.0"
description = "UI Kit for OpenForest applications"
authors = [
    {name = "Gerrux",email = "kalinin.i.v@edu.narfu.ru"}
]
license = "MIT"
readme = "README.md"
packages = [{include = "arbokit", from = "src"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-qt = "^4.4.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true
