[project]
name = "arbokit"
version = "0.1.0"
description = "UI Kit for OpenForest applications"
authors = [
    {name = "Gerrux", email = "kalinin.i.v@edu.narfu.ru"}
]
license = "MIT"
readme = "README.md"
packages = [{include = "arbokit", from = "src"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyside6>=6.9.0,<7.0.0",
    "pyyaml>=6.0.2,<7.0.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-qt = "^4.4.0"
pytest-cov = "^5.0.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
pre-commit = "^4.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
ruff = "^0.11.9"

[tool.poetry.scripts]
check = "scripts.check:run_checks"
generate-resources = "scripts.generate_resources:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
/(
    src/ArboKit/resources/icons_rc.py
)/
'''

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "pytestqt.*",
    "ArboKit.resources.icons_rc",
    "examples.demo"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ArboKit.resources.icons_rc"
ignore_errors = true

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "C", "B"]
lint.ignore = ["E501", "E203", "RUF002", "RUF012", "RUF013", "Q000", "I001"]
lint.extend-select = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
